@@ -6,6 +6,7 @@ Changelog
 
 - Show stdout of rsync command at verification step of SyncDirectory when
   running in debug mode.
+- Add VirtualEnv3.6 to support Python3.6
 
 
 1.7.5 (2018-04-05)
